--- a/highcharts-api/highcharts/4-separate-axes/index.html
+++ b/highcharts-api/highcharts/4-separate-axes/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/annotations.js"></script>
 
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container" style="max-width:1000px;margin:0 auto;"></div>
 </body>
 
 <script src="main.js"></script>
