--- a/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
+++ b/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
-
+  <script src="https://code.highcharts.com/highcharts-more.js"></script>
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container1"></div>
+  <div id="container2"></div>
 </body>
 
 <script src="main.js"></script>
