--- a/highcharts-api/highcharts/3-stacked-bar/index.html
+++ b/highcharts-api/highcharts/3-stacked-bar/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="container" style="max-width:1000px;margin:0 auto;"></div>
+  <div id="container"></div>
 </body>
 
 <script src="main.js"></script>
