--- a/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
+++ b/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="container1"></div>
   <div id="container2" style="width:100%; height: 100%;margin 0 auto;"></div>
+  <div id="container3" style="width:100%; height: 100%;margin 0 auto;"></div>
 </body>
 
 <script src="main.js"></script>
