--- a/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
+++ b/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
@@ -8,7 +8,8 @@
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/highcharts-more.js"></script>
-</head>
+
+  </head>
 
 <body>
   <div id="container1"></div>
@@ -16,4 +17,9 @@
   <div id="container3" style="width:100%; height: 100%;margin 0 auto;"></div>
 </body>
 
-<script src="main.js"></script>
+<script type="module" src="./colorBubbleFactory.js"></script>
+
+<script type="module" src="./main_part1.js"></script>
+<script type="module" src="./main_part2.js"></script>
+<script type="module" src="./main_part3.js"></script>
+
