--- a/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
+++ b/highcharts-api/highcharts/8-packed-bubble-algorithm/index.html
@@ -12,14 +12,11 @@
   </head>
 
 <body>
-  <div id="container1"></div>
-  <div id="container2" style="width:100%; height: 100%;margin 0 auto;"></div>
-  <div id="container3" style="width:100%; height: 100%;margin 0 auto;"></div>
+  <div id="container" style="width:100%; height: 100%;margin 0 auto;"></div>
 </body>
 
-<script type="module" src="./colorBubbleFactory.js"></script>
-
-<script type="module" src="./main_part1.js"></script>
-<script type="module" src="./main_part2.js"></script>
-<script type="module" src="./main_part3.js"></script>
-
+<script src="./main_part1.js"></script>
+<!--
+<script src="./main_part3.js"></script>
+<script src="./main_part2.js"></script>
+-->
