--- a/highcharts-api/highcharts/9-3d-charts/index.html
+++ b/highcharts-api/highcharts/9-3d-charts/index.html
@@ -7,11 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
-
+  <script src="https://code.highcharts.com/highcharts-more.js"></script>
+  <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+	
+	<script src="https://code.highcharts.com/modules/cylinder.js"></script>
+	<script src="https://code.highcharts.com/modules/funnel3d.js"></script>
+	<script src="https://code.highcharts.com/modules/pyramid3d.js"></script>
 </head>
 
-<body>
+<body style="margin:0;">
   <div id="container"></div>
+	<!--
+   <div id="sliders">
+        <table>
+            <tr>
+                <td><label for="alpha">Alpha Angle</label></td>
+                <td><input id="alpha" type="range" min="0" max="45" value="15"/> <span id="alpha-value" class="value"></span></td>
+            </tr>
+            <tr>
+                <td><label for="beta">Beta Angle</label></td>
+                <td><input id="beta" type="range" min="-45" max="45" value="15"/> <span id="beta-value" class="value"></span></td>
+            </tr>
+            <tr>
+                <td><label for="depth">Depth</label></td>
+                <td><input id="depth" type="range" min="20" max="8	00" value="50"/> <span id="depth-value" class="value"></span></td>
+            </tr>
+        </table>
+    </div>
+	-->
 </body>
 
-<script src="main.js"></script>
+<script src="pyramidFunnel3d.js"></script>
