--- a/highcharts-api/highcharts-stock/1-live-data-tools/index.html
+++ b/highcharts-api/highcharts-stock/1-live-data-tools/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.highcharts.com/stock/highstock.js"></script>
   <script src="https://code.highcharts.com/stock/modules/data.js"></script>
+  <script src="https://code.highcharts.com/stock/indicators/indicators.js"></script>
 </head>
 
 <body>
   <div id="container"></div>
 </body>
 
-<script src="main.js"></script>
+<script src="main_livechart1.js"></script>
