--- a/highcharts-api/highcharts-stock/1-live-data-tools/index.html
+++ b/highcharts-api/highcharts-stock/1-live-data-tools/index.html
@@ -17,8 +17,9 @@
   <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
 </head>
 
-<body>
-  <div id="container"></div>
+<body style="display:flex;justify-content:center;">
+  <div id="container2" style="width:50%;"></div>
+  <div id="container1" style="width:50%;"></div>
 </body>
 
 <script src="main_livechart1.js"></script>
