--- a/highcharts-api/highcharts-stock/1-live-data-tools/index.html
+++ b/highcharts-api/highcharts-stock/1-live-data-tools/index.html
@@ -6,21 +6,17 @@
   <script src="https://code.highcharts.com/stock/highstock.js"></script>
   <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
   <script src="https://code.highcharts.com/stock/modules/data.js"></script>
-
   <script src="https://code.highcharts.com/modules/drag-panes.js"></script>
   <script src="https://code.highcharts.com/modules/annotations-advanced.js"></script>
   <script src="https://code.highcharts.com/modules/price-indicator.js"></script>
   <script src="https://code.highcharts.com/modules/full-screen.js"></script>
   <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
   <script src="https://code.highcharts.com/stock/indicators/macd.js"></script>
-  
   <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
   <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
 </head>
-
 <body style="display:flex;justify-content:center;">
   <div id="container2" style="width:50%;"></div>
   <div id="container1" style="width:50%;"></div>
 </body>
-
-<script src="main_livechart1.js"></script>
+<script src="main.js"></script>
